--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,5 +40,5 @@ Suggests:
     usethis (>= 3.1.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
-URL: https://github.com/lucy-dwr/pubclassify
+URL: https://lucy-dwr.github.io/pubclassify
 BugReports: https://github.com/lucy-dwr/pubclassify/issues
