--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,17 +26,17 @@ Imports:
     tibble (>= 3.2.1),
     xml2 (>= 1.3.6)
 Suggests: 
-    forcats,
-    ggplot2,
+    forcats (>= 1.0.0),
+    ggplot2 (>= 3.5.2),
     here (>= 1.0.1),
-    kableExtra,
-    knitr,
-    RColorBrewer,
+    kableExtra (>= 1.4.0),
+    knitr (>= 1.50),
+    RColorBrewer (>= 1.1.3),
     readr (>= 2.1.5),
-    rmarkdown,
+    rmarkdown (>= 2.29),
     testthat (>= 3.0.0),
-    tidyr,
-    treemapify,
+    tidyr (>= 1.3.1),
+    treemapify (>= 2.5.6),
     usethis (>= 3.1.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
