add more `ellmer` functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,select)
 importFrom(dplyr,transmute)
+importFrom(ellmer,chat_google_gemini)
+importFrom(ellmer,google_upload)
 importFrom(glue,glue)
 importFrom(janitor,clean_names)
 importFrom(jsonlite,fromJSON)
@@ -33,6 +35,7 @@ importFrom(purrr,imap_dfr)
 importFrom(purrr,map_lgl)
 importFrom(rcrossref,cr_funders)
 importFrom(rcrossref,cr_works)
+importFrom(readr,write_csv)
 importFrom(stringr,str_extract)
 importFrom(tibble,tibble)
 importFrom(xml2,read_xml)
